--- a/index.html
+++ b/index.html
@@ -69,37 +69,32 @@
           </div>
 
           <div class="about-text">
-            <p class="text">My name is Corey McCoy, and I'm a Full Stack Web Developer and web designer based out of Texas, and I build digital products.</p>
-            <br />
-            <p class="text">
-              As a designer, my goal isn't to just make the web prettier. It's to create an interaction between visitor and brand, to communicate a message, tell a story, or help
-              the visitor better understand the solution, value, and company.
-            </p>
+            <p class="text">My name is Corey McCoy, and I'm a Full Stack Web Developer based out of Texas, and I build digital products.</p>
             <br />
 
             <p class="text">
-              And as a developer, I want to use the technology that enables me to quickly create a working solution while maintaining the spirit of the product and without
-              sacrificing the user experience.
+              My fascination with programming and web development began in 2013, when, rather than waiting for the developer we had hired, I decided to update my company's website
+              myself, which proved to be more difficult than I had anticipated. That event helped me sharpen my research and problem solving skills, and taught me the value of
+              hacking together a solution until I can produce a better one.
             </p>
             <br />
 
-            <p class="text">
-              My fascination with web development began in 2013, when, rather than waiting for the developer we had hired, I decided to update my company's website myself, which
-              proved to be more difficult than I had anticipated. That event helped me sharpen my problem solving skills and taught me the value of hacking together a solution
-              until I can produce a better one.
-            </p>
+            <p class="text">Today, I spend the most of my time hacking on projects, exploring the JavaScript ecosystem, and trying to optimize my development process.</p>
+            <br />
           </div>
-          <br />
 
           <div>
-            <p class="text">I create awesome digital products using these technologies:</p>
+            <p class="text">Here are the technologies and frameworks I use to build things with:</p>
             <ul class="tech-stack">
               <li>JavaScript</li>
               <li>React</li>
               <li>Express</li>
               <li>Node.js</li>
               <li>MongoDB</li>
+              <li>BootStrap</li>
               <li>WordPress</li>
+              <li>HTML5</li>
+              <li>CS3</li>
             </ul>
           </div>
           <div>
