--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <a href="mailto:coreyamccoy@gmail.com" class="chat-text">
             <p class="email-link">Let's Talk ></p>
           </a>
+          <a class="resume-link" target="_blank" href="./images/Resume.pdf" title="Corey McCoy Resume">
+            <p>Resume</p>
+          </a>
         </div>
       </nav>
     </header>
@@ -69,7 +72,7 @@
           </div>
 
           <div class="about-text">
-            <p class="text">My name is Corey McCoy, and I'm a Full Stack Web Developer based out of Texas, and I build digital products.</p>
+            <p class="text">My name is Corey McCoy, and I'm a Front-End Web Developer based out of Texas, and I build digital products.</p>
             <br />
 
             <p class="text">
@@ -94,7 +97,7 @@
               <li>BootStrap</li>
               <li>WordPress</li>
               <li>HTML5</li>
-              <li>CS3</li>
+              <li>CSS3</li>
             </ul>
           </div>
           <div>
@@ -113,6 +116,13 @@
 
           <div>
             <h3 class="title-header">My Work</h3>
+            <p class="text">Whether working on one of my own ideas, or working with a client, my development objectives are to;</p>
+            <br />
+            <p class="text">1. Work quickly and efficiently to create a functioning product.</p>
+            <p class="text">2. Write code that is simple to understand and maintain.</p>
+            <p class="text">3. Iterate on the product to improve its functionality over time.</p>
+            <br />
+            <h4 class="h4">Some of my recent work</h4>
           </div>
           <ul class="project-cards">
             <li class="styled-project-card">
@@ -195,7 +205,6 @@
                       <li>HTML</li>
                       <li>CSS</li>
                       <li>JavaScript</li>
-                      <li>API</li>
                     </ul>
                   </div>
                   <!-- <div class="see-more-div">
@@ -272,6 +281,7 @@
           </div>
           <div>
             <ul class="social-links">
+              <li class="social-link-item"><a target="_blank" href="./images/Resume.pdf" title=""> Resume </a></li>
               <li class="social-link-item">
                 <a href="https://github.com/CoreyMcCoy"> GitHub </a>
               </li>
