--- a/index.html
+++ b/index.html
@@ -89,15 +89,19 @@
           <div>
             <p class="text">Here are the technologies and frameworks I use to build things with:</p>
             <ul class="tech-stack">
-              <li>JavaScript</li>
-              <li>React</li>
-              <li>Express</li>
-              <li>Node.js</li>
-              <li>MongoDB</li>
-              <li>BootStrap</li>
-              <li>WordPress</li>
               <li>HTML5</li>
               <li>CSS3</li>
+              <li>JavaScript</li>
+              <li>API</li>
+              <li>React</li>
+              <li>Bootstrap</li>
+              <li>WordPress</li>
+              <li>Git</li>
+            </ul>
+            <ul class="be tech-stack">
+              <li>Node.js</li>
+              <li>Express.js</li>
+              <li>MongoDB</li>
             </ul>
           </div>
           <div>
@@ -264,10 +268,16 @@
             <h3 class="title-header get-in-touch">Get In touch</h3>
           </div>
           <div class="contact-text">
-            <p class="text">I'm currently available, and looking for new opportunities to work on interesting projects with interesting people.</p>
+            <p class="text">
+              I'm currently available, and looking for new opportunities to work on interesting projects with interesting people. If you're interested in working together, please
+              feel free to reach out!
+            </p>
           </div>
           <div>
             <a class="contact-btn" href="mailto:coreyamccoy@gmail.com?subject=Let's talk">Let's Talk</a>
+          </div>
+          <div>
+            <a class="resume-text" target="_blank" href="./images/Resume.pdf" title="">View My Resume</a>
           </div>
           <div class="muted-text-div-bottom">
             <span class="muted-text-bottom"> < /footer > </span>
@@ -281,7 +291,6 @@
           </div>
           <div>
             <ul class="social-links">
-              <li class="social-link-item"><a target="_blank" href="./images/Resume.pdf" title=""> Resume </a></li>
               <li class="social-link-item">
                 <a href="https://github.com/CoreyMcCoy"> GitHub </a>
               </li>
