--- a/index.html
+++ b/index.html
@@ -123,12 +123,42 @@
             <p class="text">Whether working on one of my own ideas, or working with a client, my development objectives are to;</p>
             <br />
             <p class="text">1. Work quickly and efficiently to create a functioning product.</p>
-            <p class="text">2. Write code that is simple to understand and maintain.</p>
-            <p class="text">3. Iterate on the product to improve its functionality over time.</p>
+            <p class="text">2. Build things that have utility, and provide some type of value.</p>
+            <p class="text">3. Write code that is simple to understand and maintain.</p>
+            <p class="text">4. Iterate on the product to improve its functionality over time.</p>
             <br />
             <h4 class="h4">Some of my recent work</h4>
           </div>
           <ul class="project-cards">
+            <li class="styled-project-card">
+              <div class="card">
+                <div class="header">
+                  <div class="card-title">
+                    <h4 class="project-title">Simple QR Code Generator</h4>
+                    <a href="http://simple-qrcode.com/" class="ext-link"><i class="fas fa-external-link-alt"></i></a>
+                  </div>
+                  <div class="card-content">
+                    <p class="text">Using QRCode.js, I built a simple online tool for generating static QR Codes.</p>
+                  </div>
+                </div>
+                <div class="footer">
+                  <div class="technologies">
+                    <ul class="tech-list">
+                      <li>QRCode.js</li>
+                      <li>JavaScript</li>
+                      <li>Bootstrap</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
+                  </div>
+                  <!-- <div class="see-more-div">
+                    <span class="see-more">
+                      <a href="./images/#">See More</a>
+                    </span>
+                  </div> -->
+                </div>
+              </div>
+            </li>
             <li class="styled-project-card">
               <div class="card">
                 <div class="header">
