--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != 'dataLayer' ? '&l=' + l : '';
+                j.async = true;
+                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-5RW2WZQ');
+        </script>
+        <!-- End Google Tag Manager -->
         <link rel="stylesheet" href="./styles.css" />
         <link rel="icon" type="image/icon" href="./images/favicon/cm_logo_32x32.png" sizes="32x32" />
         <link rel="icon" type="image/icon" href="./images/favicon/cm_logo_16x16.png" sizes="16x16" />
@@ -11,6 +25,9 @@
         <title>Corey McCoy</title>
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RW2WZQ" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         <!-- Header (nav - logo and contact link) -->
         <header class="navbar-header">
             <nav class="navbar">
