--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@
             <nav class="navbar">
                 <div class="logo">
                     <a href="/">
-                        <img src="./images/cm_icon_v1.0.4.svg" alt="logo" />
+                        <h3 class="h3 wordmark-logo">Corey McCoy</h3>
                     </a>
                 </div>
+                <!-- <div class="logo">
+                    <a href="/">
+                        <img src="./images/cm_icon_v1.0.4.svg" alt="logo" />
+                    </a>
+                </div> -->
                 <div class="top-contact">
                     <a href="mailto:coreyamccoy@gmail.com" class="chat-text">
                         <p class="email-link">Let's Talk ></p>
                     </a>
-                    <a class="resume-link" target="_blank" href="./images/Resume.pdf" title="Corey McCoy Resume">
+                    <a class="resume-link" target="_blank" href="./images/CoreyMcCoyResume.pdf" title="Corey McCoy Resume">
                         <p>Resume</p>
                     </a>
                 </div>
@@ -85,11 +90,11 @@
                         <h1 class="h1">Hi, I'm Corey.</h1>
                     </div>
                     <div>
-                        <h2 class="h2">Freelance Web Developer.</h2>
+                        <h2 class="h2">Software Developer.</h2>
                     </div>
 
                     <div class="about-text">
-                        <p class="text">My name is Corey McCoy, and I'm a Front-End Web Developer based out of Texas, and I build digital products.</p>
+                        <p class="text">My name is Corey McCoy, and I'm a Software Developer based out of Texas, and I build digital products.</p>
                         <br />
 
                         <p class="text">
@@ -230,15 +235,13 @@
                                             <li>REST API</li>
                                         </ul>
                                     </div>
-                                    <!-- <div class="see-more-div">
-                    <span class="see-more">
-                      <a href="./images/#">See More</a>
-                    </span>
-                  </div> -->
                                 </div>
                             </div>
                         </li>
-                        <li class="styled-project-card">
+
+                        <!-- Section -->
+
+                        <!-- <li class="styled-project-card">
                             <div class="card">
                                 <div class="header">
                                     <div class="card-title">
@@ -260,15 +263,13 @@
                                             <li>Stripe</li>
                                         </ul>
                                     </div>
-                                    <!-- <div class="see-more-div">
-                    <span class="see-more">
-                      <a href="./images/#">See More</a>
-                    </span>
-                  </div> -->
                                 </div>
                             </div>
-                        </li>
-                        <li class="styled-project-card">
+                        </li> -->
+
+                        <!-- Section -->
+
+                        <!-- <li class="styled-project-card">
                             <div class="card">
                                 <div class="header">
                                     <div class="card-title">
@@ -290,15 +291,11 @@
                                             <li>Food API</li>
                                         </ul>
                                     </div>
-                                    <!-- <div class="see-more-div">
-                    <span class="see-more">
-                      <a href="./images/#">See More</a>
-                    </span>
-                  </div> -->
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
+
                     <div class="muted-text-div-bottom">
                         <span class="muted-text-bottom"> < /main > </span>
                     </div>
