--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="about-text">
-                        <p class="text">My name is Corey McCoy, and I'm a Software Developer based out of Texas, and I build digital products.</p>
+                        <p class="text">My name is Corey McCoy, and I'm a Fullstack Software Developer based out of Texas.</p>
                         <br />
 
                         <p class="text">
@@ -105,26 +105,24 @@
                         <br />
 
                         <p class="text">
-                            Today, I spend the majority of my time launching digital businesses, working with clients, and trying to optimize my development process.
+                            Today, I spend most of my time studying web platform technologies, writing technical content and building applications that help me improve my
+                            programming skills.
                         </p>
                         <br />
                     </div>
 
                     <div>
-                        <p class="text">Here are the technologies and frameworks I use to build things with:</p>
+                        <p class="text">Web Platform Technologies:</p>
                         <ul class="tech-stack">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
                             <li>JavaScript</li>
-                            <li>API</li>
                             <li>React</li>
-                            <li>Bootstrap</li>
-                            <li>WordPress</li>
-                            <li>Git</li>
+                            <li>Web APIs</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
                         </ul>
+                        <p class="be-tech text">Backend Technologies:</p>
                         <ul class="be tech-stack">
                             <li>Node.js</li>
-                            <li>Express.js</li>
                             <li>MongoDB</li>
                         </ul>
                     </div>
